syntax = "proto3";

package booking;

import "booking/constants/type.proto";

option java_multiple_files = true;
option java_package = "grpc.booking";

service BookingService {
  rpc CheckExistBookingById(BookingIdRequest) returns (ExistBookingResponse){};
  rpc UpdateBookingAfterPaymentSucceeded(UpdateBookingAfterPaymentRequest) returns (UpdateBookingResponse){};
  rpc UpdateBookingAfterPaymentFailed(UpdateBookingAfterPaymentRequest) returns (UpdateBookingResponse){};
  rpc UpdateBookingAfterPaymentCanceled(BookingIdRequest) returns (UpdateBookingResponse){};
  rpc GetBookingById(BookingIdRequest) returns (GetBookingByIdResponse){};
  rpc GetAllBookingsByStatus(BookingStatusRequest) returns (GetAllBookingsByStatusResponse){};
}

message BookingIdRequest {
  int32 id = 1;
}

message BookingStatusRequest {
  constants.BookingStatus status = 1;
}

message UpdateBookingAfterPaymentRequest {
  int32 booking_id = 1;
  constants.PaymentMethod payment_method = 2;
}

message BookingResponse {
  int32 booking_id = 1;
  int32 sub_tour_id = 2;
  string tour_code = 3;
  int32 amount = 4;
  constants.BookingStatus status = 5;
}

message GetBookingByIdResponse {
  BookingResponse booking = 1;
}

message GetAllBookingsByStatusResponse {
  repeated BookingResponse bookings = 1;
}

message ExistBookingResponse {
  bool is_exists = 1;
}

message UpdateBookingResponse {
  string message = 1;
}